--- a/index.html
+++ b/index.html
@@ -27,18 +27,30 @@
             </nav>
         </header>
         <main class="main">
-
+            <figure class="fig">
+                <img src="./images/woman-in-white.jpg" alt="Woman standing in white long sleeve." class="fig__img">
+            </figure>
         </main>
+        <aside class="aside">
+            <h3 class="aside__date">2020</h3>
+        </aside>
         <footer class="footer">
             <ul class="footer__list">
+                <!-- Icons made by <a href="https://www.flaticon.com/authors/freepik" and <a href="https://www.flaticon.com/authors/pixel-perfect" -->
                 <li class="footer__social-item">
-                    <a href="#" class="footer__social-link">Facebook</a>
+                    <a href="#" class="footer__social-link">
+                        <img src="./images/icon-facebook.svg" alt="Facebook logo" class="footer__social-link__icon">
+                    </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="#" class="footer__social-link">Instagram</a>
+                    <a href="#" class="footer__social-link">
+                        <img src="./images/icon-instagram.svg" alt="Instagram logo" class="footer__social-link__icon">
+                    </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="#" class="footer__social-link">Twitter</a>
+                    <a href="#" class="footer__social-link">
+                        <img src="./images/icon-twitter.svg" alt="Twitter logo" class="footer__social-link__icon">
+                    </a>
                 </li>
             </ul>
         </footer>
