Added tagline layout

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <img src="./images/woman-in-white.jpg" alt="Woman standing in white long sleeve." class="fig__img">
             </figure>
         </main>
+        <aside class="tagline">
+            <h4 class="tagline__title">Discover</h4>
+        </aside>
         <aside class="aside">
             <h3 class="aside__date">2020</h3>
         </aside>
