Added animations, plus icon, and tagline

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <main class="main">
             <figure class="fig">
                 <img src="./images/woman-in-white.jpg" alt="Woman standing in white long sleeve." class="fig__img">
+                <figcaption class="fig__caption">prestige</figcaption>
             </figure>
         </main>
         <aside class="tagline">
@@ -38,6 +39,7 @@
             <h3 class="aside__date">2020</h3>
         </aside>
         <footer class="footer">
+            <img src="./images/sm-plus.svg" alt="Plus icon decoration" class="footer__plus-icon">
             <ul class="footer__list">
                 <!-- Icons made by <a href="https://www.flaticon.com/authors/freepik" and <a href="https://www.flaticon.com/authors/pixel-perfect" -->
                 <li class="footer__social-item">
