--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload stylesheet" as="style" href="/style.css">
+    <link rel="preload stylesheet" as="style" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Charm:wght@700&display=swap" rel="preload stylesheet" as="style">
     <title>Fashion Landing</title>
 </head>
